# jp-index

./: .gitignore  environment.yml  main.py  pyproject.toml  requirements.txt
notebooks/: activity.qmd  consumer.qmd  db.qmd  graph.qmd  ibis.qmd
src/: graphs.py  models.py
src/dao/: activity_table.py  awards_table.py  consumer_table.py
src/data/: awards_process.py  awards_pull.py  data_process.py  data_pull.py  demographic_model.py  lee_carter.py  models.py  mort_model.py  nat_lambda.py  nat_model.py  nat_model_nolambda.py  natality_model.py  pull_awards.py
