[project]
name = "jp-index"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastexcel>=0.12.0",
  "ibis-framework[sqlite]>=9.5.0",
  "polars>=1.16.0",
  "pyarrow>=17.0.0",
  "sqlmodel>=0.0.22",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
