[project]
name = "jp-index"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.3",
  "fastexcel>=0.12.0",
  "pandas>=2.2.3",
  "numpy>=2.2.6",
  "pandas>=2.2.3",
  "polars>=1.16.0",
  "pyarrow>=17.0.0",
  "sqlmodel>=0.0.22",
  "tqdm>=4.67.1",
  "altair>=5.5.0",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "pynvim>=0.5.2"]
